syntax = "proto3";

package service.ourchat.session.allow_user_join_session.v1;

message AllowUserJoinSessionRequest {
  uint64 session_id = 1;
  uint64 user_id = 2;
  bool accepted = 3;
}

message AllowUserJoinSessionResponse {}

message AllowUserJoinSessionNotification {
  uint64 session_id = 1;
  bool accepted = 2;
}
